# packitup-gnome

./: .gitignore  LICENSE  Makefile  README.md  README.pt-BR.md  builder.ui  install-cmd.py  meson.build
po/: LINGUAS  POTFILES.in  en.po  en_US.po  license_header.txt  meson.build  packitup-gnome.pot  packitup.pot  pt_BR.mo  pt_BR.po
src/: about.ui  dev.bm7.packitup.gschema.xml  gears_menu.ui  hello-world-gtk-stripped-ui.c  hello-world-gtk.c  license.ui  main.cc  meson.build  org.gtkmm.packitup.gschema.xml  packitup-gnome.desktop.in  packitup-gnome.gresource.xml  packitup.cc  packitup.desktop.in  packitup.gresource.xml  packitup.h  packitup_license.cc  packitup_license.h  packitup_prefs.cc  packitup_prefs.h  packitup_window.cc  packitup_window.h  prefs.ui  styles.css  tech.bm7.packitup-gnome.gschema.xml  tech.bm7.packitup.gschema.xml  window.ui
